Started integrating app intro . 80% completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,14 +108,14 @@
     <string name="lat_long_speed_description">Your Location (Longitude and Latitude) and Speed are obtained automatically by Tatu Safety using your phones GPS. Please ensure you have enabled GPS on your phone.</string>
     <string name="login_anonymously_label">LOGIN ANONYMOUSLY</string>
     <string name="title_activity_maps">Map</string>
-<string-array name="sacco">
-    <item>Select SACCO</item>
-    <item>Embassava</item>
-    <item>Umoinner</item>
-    <item>Double M</item>
-    <item>City Hopper</item>
-    <item>City Star</item>
-</string-array>
+    <string-array name="sacco">
+        <item>Select SACCO</item>
+        <item>Embassava</item>
+        <item>Umoinner</item>
+        <item>Double M</item>
+        <item>City Hopper</item>
+        <item>City Star</item>
+    </string-array>
 
     <string-array name="issue">
         <item>Select ISSUE</item>
@@ -125,4 +125,21 @@
         <item>Hiked Fare</item>
         <item>Forgot Change</item>
     </string-array>
+    <string name="title_activity_welcome">Home Screen</string>
+    <string name="next">NEXT</string>
+    <string name="skip">SKIP</string>
+    <string name="start">GOT IT</string>
+
+    <string name="slide_1_title">Hello There!</string>
+    <string name="slide_1_desc">Welcome to Tatu Safety.Swipe Left to continue</string>
+
+    <string name="slide_2_title">Reports</string>
+    <string name="slide_2_desc">With Tatu Safety you can report any malpractice that occurs in a PSV while you travel!</string>
+
+    <string name="slide_3_title">Traffic Updates</string>
+    <string name="slide_3_desc">Receive traffic updates on the go with Tatu Safety fetched straight from twitter!</string>
+
+
+    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
+    <string name="play_again">Play Again</string>
 </resources>
